fix: normalize textdocument too

--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -165,7 +165,7 @@
         "luau-lsp.sourcemap.enabled": {
           "markdownDescription": "Whether Rojo sourcemap parsing is enabled",
           "type": "boolean",
-          "default": true,
+          "default": false,
           "scope": "resource"
         },
         "luau-lsp.sourcemap.autogenerate": {
