--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -37,8 +37,8 @@ jobs:
       - name: Build Server
         run: |
           mkdir build && cd build
-          cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -DLSP_STATIC_CRT:BOOL=ON ..
-          cmake --build . --config RelWithDebInfo --target Luau.LanguageServer.CLI -j 3
+          cmake -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -DLSP_STATIC_CRT:BOOL=ON ..
+          cmake --build . --target Luau.LanguageServer.CLI -j 3
 
       - name: (MacOS) Verify universal build
         if: matrix.os == 'macos-latest'
