--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -14,7 +14,7 @@ jobs:
           - os: windows-latest
             artifact-name: luau-lsp-win64
             code-target: [win32-x64]
-          - os: ubuntu-24.04
+          - os: ubuntu-20.04
             artifact-name: luau-lsp-linux
             code-target: [linux-x64]
           - os: macos-latest
@@ -37,8 +37,8 @@ jobs:
       - name: Build Server
         run: |
           mkdir build && cd build
-          cmake -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -DLSP_STATIC_CRT:BOOL=ON ..
-          cmake --build . --target Luau.LanguageServer.CLI -j 3
+          cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -DLSP_STATIC_CRT:BOOL=ON
+          cmake --build . --config Release --target Luau.LanguageServer.CLI -j 3
 
       - name: (MacOS) Verify universal build
         if: matrix.os == 'macos-latest'
@@ -50,8 +50,8 @@ jobs:
           mkdir -p ./dist
           mkdir -p editors/code/bin
           if [ "${{ matrix.os }}" = "windows-latest" ]; then
-            cp build/RelWithDebInfo/luau-lsp.exe editors/code/bin/server.exe
-            cp build/RelWithDebInfo/luau-lsp.pdb editors/code/bin/server.pdb
+            cp build/Release/luau-lsp.exe editors/code/bin/server.exe
+            cp build/Release/luau-lsp.pdb editors/code/bin/server.pdb
           else
             cp build/luau-lsp editors/code/bin/server
             chmod 777 editors/code/bin/server
